# captcha_rust

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: basic_data.rs  global_fn.rs  lib.rs
