[package]
name = "captcha_rust"
version = "0.1.0"
edition = "2018"
authors = ["Cheng SANFA <1322484007@qq.com>"]
readme = "README.md"
repository = "https://github.com/duzhaosongyue/captcha_rust"
license = "MIT"
homepage ="https://github.com/duzhaosongyue/captcha_rust"
documentation = "https://github.com/duzhaosongyue/captcha_rust/blob/main/README.md"
license-file = "LICENSE.txt"
keywords = ["captcha_rust", "captcha"]
description = "Dynamically generate verification code pictures"

[dependencies]
rand = "0.8.4"
image = "0.23.14"
base64 = "0.13.0"
imageproc="0.22.0"
rusttype ="0.9.2"
